<resources>
    <string name="app_name">The Movie DB</string>
    <string name="splash_screen_txt">Movie Review</string>
    <string name="username">Enter UserName</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="network_status">Oops! Please check your connection</string>

    <!--Login Validation-->
    <string name="invalid_email_password">Please provide a valid email and password.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout">logout</string>
    <string name="discover">Discover</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="account">Account</string>
    <string name="people">People</string>
    <string name="app_close_title">Do you want to exist the app?</string>
    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="version">"version"</string>
</resources>
