<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navItemDiscover"
            android:checked="true"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/discover" />
        <item
            android:id="@+id/navItemMovie"
            android:checked="true"
            android:icon="@drawable/ic_theaters_black_24dp"
            android:title="@string/movies" />
        <item
            android:id="@+id/navItemTvShows"
            android:checked="true"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/tv_shows" />
        <item
            android:id="@+id/navItemPeople"
            android:checked="true"
            android:icon="@drawable/ic_people_outline_black_24dp"
            android:title="@string/people" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/account" />
            <item
                android:id="@+id/nav_Logout"
                android:checked="true"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>